--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "debug": "~2.0.0",
         "jade": "~1.6.0",
         "mssql":"~1.3.0",
-        "crypto-js":"~3.1.2-5"
+        "crypto-js":"~3.1.2-5",
+        "compression":"~1.2.0"
     }
 }
